--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tavily/core": "^0.6.4",
     "dotenv": "^17.2.3",
-    "groq-sdk": "^0.37.0"
+    "groq-sdk": "^0.37.0",
+    "readline": "^1.3.0"
   }
 }
