--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
   "description": "",
   "dependencies": {
     "@tavily/core": "^0.6.4",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "groq-sdk": "^0.37.0",
     "readline": "^1.3.0"
   }
