--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "@langchain/community": "^1.1.4",
+    "@langchain/core": "^1.1.15",
+    "@langchain/openai": "^1.2.2",
+    "@langchain/pinecone": "^1.0.1",
+    "@pinecone-database/pinecone": "^6.1.3",
     "@tavily/core": "^0.6.4",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
