--- a/server/package.json
+++ b/server/package.json
@@ -16,14 +16,19 @@
     "@langchain/core": "^1.1.15",
     "@langchain/openai": "^1.2.2",
     "@langchain/pinecone": "^1.0.1",
+    "@langchain/textsplitters": "^1.0.1",
     "@pinecone-database/pinecone": "^6.1.3",
     "@tavily/core": "^0.6.4",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "fs": "^0.0.1-security",
     "groq-sdk": "^0.37.0",
+    "multer": "^2.0.2",
     "node-cache": "^5.1.2",
     "nodemon": "^3.1.11",
+    "path": "^0.12.7",
+    "pdf-parse": "^1.1.1",
     "readline": "^1.3.0"
   }
 }
